frontend/manifests/frontend.yaml
# Author: Anil Saravade
# Copyright: Copyright (©) 2020. SwapStyle. All rights reserved.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: swapsstyle/anthos-frontend:v1
        ports:
        - containerPort: 5000
        command: ["sh"]
        args: ["-c","flask run --host=0.0.0.0"]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    name: http
  selector:
      app: frontend
