frontend/manifests/service-entries.yaml
# Author: Anil Saravade
# Copyright: Copyright (©) 2020. SwapStyle. All rights reserved.

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: redis-entry
  namespace: frontend
spec:
  hosts:
  - redis.backend.global
  location: MESH_INTERNAL
  ports:
  - name: redis
    number: 6379
    protocol: TCP
  resolution: DNS
  addresses:
  - 240.0.0.2
  endpoints:
  - address: $INGRESS_GWIP_FRONTEND
    ports:
      redis: 15443
